--- a/translations-comparison/translations-comparison/MainWindow.xaml
+++ b/translations-comparison/translations-comparison/MainWindow.xaml
@@ -1,12 +1,17 @@
-﻿<Window x:Class="translations_comparison.MainWindow"
+﻿<Window x:Name="MainWin" x:Class="translations_comparison.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:translations_comparison"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Translation Comparison Tool" Height="390" Width="590" Background="#FFBFDDE4">
     <Grid>
-        
+        <TextBox x:Name="File1PathBox" HorizontalAlignment="Left" Height="23" Margin="106,105,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="218" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5"/>
+        <TextBox x:Name="File2PathBox" HorizontalAlignment="Left" Height="23" Margin="106,164,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="218" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5"/>
+        <Button x:Name="File1UploadButton" Content="Hochladen" HorizontalAlignment="Left" Margin="356,105,0,0" VerticalAlignment="Top" Width="75" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772" />
+        <Button x:Name="File2UploadButton" Content="Hochladen" HorizontalAlignment="Left" Margin="356,164,0,0" VerticalAlignment="Top" Width="75" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772"/>
+        <TextBlock x:Name="Title" HorizontalAlignment="Left" Margin="21,19,0,0" TextWrapping="Wrap" Text="Translation Comparison Tool" VerticalAlignment="Top" Width="538" FontFamily="Tw Cen MT Condensed" FontSize="20" Foreground="#FF7CA6B0"/>
+
     </Grid>
 </Window>
