--- a/translations-comparison/translations-comparison/MainWindow.xaml
+++ b/translations-comparison/translations-comparison/MainWindow.xaml
@@ -5,19 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:translations_comparison"
         mc:Ignorable="d"
-        Title="Translation Comparison Tool" Height="390" Width="806.569" Background="#FFBFDDE4">
-    <Grid Margin="0,10,2,0">
-        <TextBox x:Name="File1PathBox" HorizontalAlignment="Left" Height="23" Margin="49,153,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="218" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5"/>
-        <TextBox x:Name="File2PathBox" HorizontalAlignment="Left" Height="23" Margin="49,219,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="218" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5"/>
-        <Button x:Name="File1UploadButton" Content="Hochladen" HorizontalAlignment="Left" Margin="288,153,0,0" VerticalAlignment="Top" Width="75" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772" />
-        <Button x:Name="File2UploadButton" Content="Hochladen" HorizontalAlignment="Left" Margin="288,219,0,0" VerticalAlignment="Top" Width="75" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772"/>
+        Title="Translation Comparison Tool" Height="514.966" Width="440" Background="#FFBFDDE4">
+    <Grid Margin="10" RenderTransformOrigin="0.298,0.508">
+        
+        <TextBlock x:Name="Title" HorizontalAlignment="Left" Margin="21,19,0,0" TextWrapping="Wrap" Text="Translation Comparison Tool" VerticalAlignment="Top" Width="388" FontFamily="Tw Cen MT Condensed" FontSize="20" Foreground="#FF7CA6B0"/>
 
-        <TextBox x:Name="File3PathBox" HorizontalAlignment="Left" Height="23" Margin="454,153,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="218" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5"/>
-        <TextBox x:Name="File4PathBox" HorizontalAlignment="Left" Height="23" Margin="454,219,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="218" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5"/>
-        <Button x:Name="File3UploadButton" Content="Hochladen" HorizontalAlignment="Left" Margin="693,153,0,0" VerticalAlignment="Top" Width="75" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772" />
-        <Button x:Name="File4UploadButton" Content="Hochladen" HorizontalAlignment="Left" Margin="693,219,0,0" VerticalAlignment="Top" Width="75" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772"/>
+        <TextBlock x:Name="F1" HorizontalAlignment="Left" Margin="49,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="135" FontFamily="Calibri" FontSize="10" Foreground="#000000"><Run Text="S"/><Run Text="ource "/><Run Text="Translation File"/></TextBlock>
+        <TextBlock x:Name="F2" HorizontalAlignment="Left" Margin="49,126,0,0" TextWrapping="Wrap" Text="Target Translation File" VerticalAlignment="Top" Width="135" FontFamily="Calibri" FontSize="10" Foreground="#000000"/>
+        <TextBlock x:Name="F3" HorizontalAlignment="Left" Margin="49,179,0,0" TextWrapping="Wrap" Text="Language (Code)" VerticalAlignment="Top" Width="135" FontFamily="Calibri" FontSize="10" Foreground="#000000"/>
 
-        <TextBlock x:Name="Title" HorizontalAlignment="Left" Margin="21,19,0,0" TextWrapping="Wrap" Text="Translation Comparison Tool" VerticalAlignment="Top" Width="538" FontFamily="Tw Cen MT Condensed" FontSize="20" Foreground="#FF7CA6B0"/>
+        <TextBox x:Name="File1PathBox" IsReadOnly="True" HorizontalAlignment="Left" Height="23" Margin="49,85,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="218" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" RenderTransformOrigin="0.496,-1.639"/>
+        <TextBox x:Name="File2PathBox" IsReadOnly="True" HorizontalAlignment="Left" Height="23" Margin="49,143,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="218" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" TextChanged="File2PathBox_TextChanged"/>
+        <Button x:Name="File1UploadButton" Click="File1UploadButton_Click" Content="Select file" HorizontalAlignment="Left" Margin="288,85,0,0" VerticalAlignment="Top" Width="75" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772" />
+        <Button x:Name="File2UploadButton" Click="File2UploadButton_Click" Content="Select file" HorizontalAlignment="Left" Margin="288,143,0,0" VerticalAlignment="Top" Width="75" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772"/>
+        <TextBox x:Name="LanguadeTag" HorizontalAlignment="Left" Height="23" Margin="49,196,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="314" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" TextChanged="File2PathBox_TextChanged"/>
+
+        <TextBlock x:Name="Question" HorizontalAlignment="Left" Margin="49,250,0,0" TextWrapping="Wrap" Text="What would you like to compare?" VerticalAlignment="Top" Width="200" FontFamily="Tw Cen MT Condensed" FontSize="16" Foreground="#FF7CA6B0"/>
+        <Button x:Name="Terminology" Click="Terminology_Click" Content="Terminology" HorizontalAlignment="Left" Margin="49,295,0,0" VerticalAlignment="Top" Width="150" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772" />
+        <Button x:Name="TranslationOfUI" Click="TranslationOfUI_Click" Content="Translation of UI" HorizontalAlignment="Left" Margin="213,295,0,0" VerticalAlignment="Top" Width="150" Height="23" BorderBrush="#FF7CA6B0" Background="#FFE8F3F5" FontFamily="Calibri" Foreground="#FF396772" />
 
     </Grid>
 </Window>
